--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .image-area {
-    background-image: url('images/background.png');
+    background-image: url('../images/background.png');
     background-position: center center;
     background-size: cover;
     background-color: #000;
